--- a/utils/dataset_updater.ipynb
+++ b/utils/dataset_updater.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from openai import OpenAI\n",
-    "import time"
+    "from openai import OpenAI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +25,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +204,7 @@
        "4                    True  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,6 +1561,156 @@
    "source": [
     "df.to_csv('../data/data_openai_api_with_mask.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>ethical_us</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>An intelligent system connected to the video s...</td>\n",
+       "      <td>**Title**: Ensuring Privacy in Intelligent Vid...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Terminal area and booking documents and bookin...</td>\n",
+       "      <td>**Title**: Clear and Comprehensive Help Inform...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Before a person with a vehicle enters the port...</td>\n",
+       "      <td>**Title**: Transparent Information Handling fo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A clear advertisement is placed on the booking...</td>\n",
+       "      <td>**Title**: Clear Advertisement on AI and Data ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Data information policy is communicated at the...</td>\n",
+       "      <td>**Title**: Clear Communication of Data Informa...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  \\\n",
+       "0  An intelligent system connected to the video s...   \n",
+       "1  Terminal area and booking documents and bookin...   \n",
+       "2  Before a person with a vehicle enters the port...   \n",
+       "3  A clear advertisement is placed on the booking...   \n",
+       "4  Data information policy is communicated at the...   \n",
+       "\n",
+       "                                          ethical_us  \n",
+       "0  **Title**: Ensuring Privacy in Intelligent Vid...  \n",
+       "1  **Title**: Clear and Comprehensive Help Inform...  \n",
+       "2  **Title**: Transparent Information Handling fo...  \n",
+       "3  **Title**: Clear Advertisement on AI and Data ...  \n",
+       "4  **Title**: Clear Communication of Data Informa...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../data/data_openai_api_with_mask.csv')\n",
+    "df = df[['text', 'ethical_us']]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       <s>[INST] test \\nAn intelligent system connect...\n",
+      "1       <s>[INST] test \\nTerminal area and booking doc...\n",
+      "2       <s>[INST] test \\nBefore a person with a vehicl...\n",
+      "3       <s>[INST] test \\nA clear advertisement is plac...\n",
+      "4       <s>[INST] test \\nData information policy is co...\n",
+      "                              ...                        \n",
+      "1088    <s>[INST] test \\nThe website must provide high...\n",
+      "1089    <s>[INST] test \\nThe product shall be intuitiv...\n",
+      "1090    <s>[INST] test \\nThe system shall be intuitive...\n",
+      "1091    <s>[INST] test \\nThe product shall use symbols...\n",
+      "1092    <s>[INST] test \\nThe system shall be intuitive...\n",
+      "Name: data, Length: 1093, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../data/data_openai_api_with_mask.csv')\n",
+    "df = df[['text', 'ethical_us']]\n",
+    "df['data'] = df.apply((lambda row: f'''<s>[INST] test \\n{row['text']} \\n[/INST] {row['ethical_us']}</s>'''), axis=1)\n",
+    "print(df['data'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, v \u001b[38;5;129;01min\u001b[39;00m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m      2\u001b[0m     v \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhehe\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      3\u001b[0m     df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m][i] \u001b[38;5;241m=\u001b[39m v\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "for i, v in df['data']:\n",
+    "    v = 'hehe'\n",
+    "    df['data'][i] = v\n",
+    "\n",
+    "df['data']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
