--- a/utils/dataset_updater.ipynb
+++ b/utils/dataset_updater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,25 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['text', 'transparency', 'dignity', 'sustainability', 'trust',\n",
-       "       'freedom and autonomy', 'beneficence', 'privacy', 'responsibility',\n",
-       "       'non-maleficence', 'justice and equity'],\n",
+       "Index(['Unnamed: 0', 'text', 'major_principle', 'is_major_principle_here',\n",
+       "       'ethical_us', 'correct'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/data.csv')\n",
+    "df = pd.read_csv('../data/data_final.csv')\n",
     "df = df[['text', 'transparency_sum', 'dignity_sum', 'sustainability_sum', 'trust_sum','freedom_autonomy_sum', 'beneficence_sum', 'privacy_sum', 'responsibility_sum', 'non_maleficence_sum', 'justice_equity_sum']]\n",
     "df = df.rename(columns={'transparency_sum': 'transparency', 'dignity_sum': 'dignity', 'sustainability_sum': 'sustainability', 'trust_sum': 'trust', 'freedom_autonomy_sum': 'freedom and autonomy', 'beneficence_sum': 'beneficence', 'privacy_sum': 'privacy', 'responsibility_sum': 'responsibility', 'non_maleficence_sum': 'non-maleficence', 'justice_equity_sum': 'justice and equity'})\n",
     "df.columns"
@@ -423,24 +422,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_54025/138863577.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['correct'] = df['ethical_us'].str.contains('As a')\n"
-     ]
+     "data": {
+      "text/plain": [
+       "correct\n",
+       "True    949\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['correct'] = df['ethical_us'].str.contains('As a')"
+    "df['correct'] = df['ethical_us'].str.contains('As a')\n",
+    "df['correct'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['ethical_us'] = df['ethical_us'].str.extract(r'(As a.*)')"
    ]
   },
   {
@@ -450,167 +459,10 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "      <th>major_principle</th>\n",
-       "      <th>is_major_principle_here</th>\n",
-       "      <th>ethical_us</th>\n",
-       "      <th>correct</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>An intelligent system connected to the video s...</td>\n",
-       "      <td>privacy</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Certainly! Here's the ethical user story based...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Terminal area and booking documents and bookin...</td>\n",
-       "      <td>transparency</td>\n",
-       "      <td>True</td>\n",
-       "      <td>**Ethical User Story:**\\n\\nAs a **user of the ...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Before a person with a vehicle enters the port...</td>\n",
-       "      <td>transparency</td>\n",
-       "      <td>True</td>\n",
-       "      <td>As a port visitor with a vehicle, I want to re...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A clear advertisement is placed on the booking...</td>\n",
-       "      <td>transparency</td>\n",
-       "      <td>True</td>\n",
-       "      <td>**User Story:**\\n\\nAs a *user of the booking s...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Data information policy is communicated at the...</td>\n",
-       "      <td>transparency</td>\n",
-       "      <td>True</td>\n",
-       "      <td>**Ethical User Story:**\\n\\nAs a **user**, I wa...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1088</th>\n",
-       "      <td>The website must provide highest degree of sec...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Requirement:\\nUsers must be informed whenever ...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1089</th>\n",
-       "      <td>The product shall be intuitive and self-explan...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Absolutely, I'll convert the given requirement...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1090</th>\n",
-       "      <td>The system shall be intuitive and self explana...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>False</td>\n",
-       "      <td>**Requirement:** Implement a feature that ensu...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1091</th>\n",
-       "      <td>The product shall use symbols and words that a...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Requirement: Our system should allow users to ...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1092</th>\n",
-       "      <td>The system shall be intuitive to the Program A...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Of course! Here is the specific requirement tr...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>949 rows × 5 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                   text major_principle  \\\n",
-       "0     An intelligent system connected to the video s...         privacy   \n",
-       "1     Terminal area and booking documents and bookin...    transparency   \n",
-       "2     Before a person with a vehicle enters the port...    transparency   \n",
-       "3     A clear advertisement is placed on the booking...    transparency   \n",
-       "4     Data information policy is communicated at the...    transparency   \n",
-       "...                                                 ...             ...   \n",
-       "1088  The website must provide highest degree of sec...            None   \n",
-       "1089  The product shall be intuitive and self-explan...            None   \n",
-       "1090  The system shall be intuitive and self explana...            None   \n",
-       "1091  The product shall use symbols and words that a...            None   \n",
-       "1092  The system shall be intuitive to the Program A...            None   \n",
-       "\n",
-       "     is_major_principle_here  \\\n",
-       "0                       True   \n",
-       "1                       True   \n",
-       "2                       True   \n",
-       "3                       True   \n",
-       "4                       True   \n",
-       "...                      ...   \n",
-       "1088                   False   \n",
-       "1089                   False   \n",
-       "1090                   False   \n",
-       "1091                   False   \n",
-       "1092                   False   \n",
-       "\n",
-       "                                             ethical_us  correct  \n",
-       "0     Certainly! Here's the ethical user story based...     True  \n",
-       "1     **Ethical User Story:**\\n\\nAs a **user of the ...     True  \n",
-       "2     As a port visitor with a vehicle, I want to re...     True  \n",
-       "3     **User Story:**\\n\\nAs a *user of the booking s...     True  \n",
-       "4     **Ethical User Story:**\\n\\nAs a **user**, I wa...     True  \n",
-       "...                                                 ...      ...  \n",
-       "1088  Requirement:\\nUsers must be informed whenever ...     True  \n",
-       "1089  Absolutely, I'll convert the given requirement...     True  \n",
-       "1090  **Requirement:** Implement a feature that ensu...     True  \n",
-       "1091  Requirement: Our system should allow users to ...     True  \n",
-       "1092  Of course! Here is the specific requirement tr...     True  \n",
-       "\n",
-       "[949 rows x 5 columns]"
+       "correct\n",
+       "True    949\n",
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 48,
@@ -619,13 +471,15 @@
     }
    ],
    "source": [
+    "df['correct'] = df['ethical_us'].str.contains('As a')\n",
     "df = df[df['correct']]\n",
-    "df"
+    "df = df.drop(columns=['Unnamed: 0'])\n",
+    "df['correct'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
