--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -26,17 +26,17 @@
    "outputs": [],
    "source": [
     "def load_model(model_name: str):\n",
-    "    # load model\n",
     "    m = transformers.AutoModelForCausalLM.from_pretrained(\n",
     "        model_name,\n",
     "        device_map='cuda',\n",
     "        trust_remote_code=False,\n",
     "        revision='main',\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    return m.to(device)\n",
     "\n",
-    "# m = load_model(model_name=model_name)"
+    "model_name = \"TheBloke/Mistral-7B-Instruct-v0.2-GPTQ\"\n",
+    "m = load_model(model_name=model_name)"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "def load_and_prepare_dataset(model_name: str):\n",
-    "    df = pd.read_csv('/home/bielrossi/us-translator/data/data_final.csv')\n",
+    "    df = pd.read_csv('/content/data_final.csv')\n",
     "    df = df[['text', 'is_major_principle_here', 'ethical_us']]\n",
     "    transparency = \"Transparency: Transparency can typically be understood in two ways: the transparency of the AI technology itself and the transparency of the AI organisations developing and using it. Throughout our analysis, transparency was regularly discussed directly, or in relation to processes required to ensure it, such as explainability, understandability and communication.\"\n",
     "    n_malef = \"Non-maleficence: The principle of non-maleficence gained attention, and in its most basic form, it means to do no harm or avoid doing harm to others\"\n",
@@ -58,14 +58,15 @@
     "    dig = \"Dignity: Human dignity is the recognition that individuals have inherent worth and that their rights should be respected\"\n",
     "    j_and_f = \"Justice and fairness: The issue of discrimination and unfair results resulting from algorithms has become a significant concern. It is imperative that systems are designed to ensure that they are free from any form of unfairness and inequality.\"\n",
     "    trust = \"Trust: Trust is built by keeping promises, making sure systems work properly and protecting data responsibly. Organisations must prove their trustworthiness by ensuring that their technologies are secure and effective.\"\n",
-    "    instruction = f'You are an ethical requirements engineer translating requirements to ethical user stories based on one of the 10 ethical principles:  {transparency}\\n {n_malef}\\n {resp}\\n {privacy}\\n {benefiecnce}\\n {f_and_a}\\n {sus}\\n {dig}\\n {j_and_f}\\n {trust}\\n  and the TEMPLATE:\\n As a <persona> i want to <do something> <so that> \\n\\n Now following this template and the ethical principles definition choose one of the ethical principles and transform the requirement below into a brief description of an ethical user story based on the choosen ethical principle, substituting <persona> for the one that requires this functionality, <do something> for what the <persona> wants to do and <so that> to the end goal of the functionality'\n",
+    "    instruction = f'You are an ethical requirements engineer translating requirements to ethical user stories based on one of the 10 ethical principles: {transparency}\\n{n_malef}\\n{resp}\\n{privacy}\\n{benefiecnce}\\n{f_and_a}\\n{sus}\\n{dig}\\n{j_and_f}\\n{trust}\\nand the TEMPLATE:\\nAs a <persona> i want to <do something> <so that>\\nNow following this template and the ethical principles defined above, choose only one of the ethical principles and transform the requirement below into a description in one line of an ethical user story, substituting <persona> for the one that requires this functionality, <do something> for what the <persona> wants to do and <so that> to the end goal of the functionality'\n",
     "\n",
-    "    df['data'] = df.apply((lambda row: f'''### Human: {instruction} \\n{row['text']} \\n  ### Assistant: {row['ethical_us']}'''), axis=1)\n",
-    "    \n",
+    "    # df['data'] = df.apply((lambda row: f'''### Human: {instruction}\\n{row['text']}]\\n ### Assistant: {row['ethical_us']}'''), axis=1)\n",
+    "    df['data'] = df.apply((lambda row: f'''<s>[INST] {instruction}\\n{row['text']}\\n[/INST] {row['ethical_us']}</s>'''), axis=1)\n",
+    "\n",
     "    t = transformers.AutoTokenizer.from_pretrained(model_name, use_fast=True)\n",
-    "    t.add_special_tokens({'pad_token': '<PAD>'})\n",
+    "    # t.add_special_tokens({'pad_token': '<PAD>'})\n",
     "    dt = datasets.Dataset.from_pandas(df)\n",
-    "    dt = dt.train_test_split(test_size=0.3)\n",
+    "    dt = dt.train_test_split(test_size=0.2)\n",
     "\n",
     "    t.pad_token = t.eos_token\n",
     "    data_collator = transformers.DataCollatorForLanguageModeling(t, mlm=False)\n",
@@ -129,13 +130,13 @@
     "        per_device_train_batch_size=batch_size,\n",
     "        per_device_eval_batch_size=batch_size,\n",
     "        num_train_epochs=num_epochs,\n",
-    "        # weight_decay=0.01,\n",
+    "        weight_decay=0.01,\n",
     "        logging_strategy=\"epoch\",\n",
     "        evaluation_strategy=\"epoch\",\n",
     "        save_strategy=\"epoch\",\n",
     "        load_best_model_at_end=True,\n",
     "        warmup_steps=2,\n",
-    "        fp16=False,\n",
+    "        fp16=True,\n",
     "        optim=\"paged_adamw_8bit\",\n",
     "    )\n",
     "\n",
@@ -156,7 +157,7 @@
     "\n",
     "    return model\n",
     "\n",
-    "final_model = train_model(m, 2e-4, 4, 10, tokenized_data, data_collator)"
+    "final_model = train_model(m, 2e-4, 4, 3, tokenized_data, data_collator)"
    ]
   },
   {
@@ -165,25 +166,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transparency = \"Transparency: Transparency can typically be understood in two ways: the transparency of the AI technology itself and the transparency of the AI organisations developing and using it. Throughout our analysis, transparency was regularly discussed directly, or in relation to processes required to ensure it, such as explainability, understandability and communication.\"\n",
-    "n_malef = \"Non-maleficence: The principle of non-maleficence gained attention, and in its most basic form, it means to do no harm or avoid doing harm to others\"\n",
-    "resp = \"Responsibility: The principle of responsibility is base on responsibility of the developers and stakeholders over the AI, accountability, liability and acting with integrity\"\n",
-    "privacy = \"Privacy: Related to privacy of personal data, because of the large abundance of data that is required for AI to work, it is important that individuals privacy is not jeopardised as a result\"\n",
-    "benefiecnce = \"Beneficence: Beneficence essentially means to do good, to carry out an activity with the intention of benefitting someone or society as a whole\"\n",
-    "f_and_a = \"Freedom and autonomy: Democratic societies place value in freedom and autonomy, and it is important that AI use does not encumber or harm these for us\"\n",
-    "sus = \"Sustainability: All fields and disciplines are affected and need to incorporate sustainability agendas\"\n",
-    "dig = \"Dignity: Human dignity is the recognition that individuals have inherent worth and that their rights should be respected\"\n",
-    "j_and_f = \"Justice and fairness: The issue of discrimination and unfair results resulting from algorithms has become a significant concern. It is imperative that systems are designed to ensure that they are free from any form of unfairness and inequality.\"\n",
-    "trust = \"Trust: Trust is built by keeping promises, making sure systems work properly and protecting data responsibly. Organisations must prove their trustworthiness by ensuring that their technologies are secure and effective.\"\n",
-    "instruction = f'You are an ethical requirements engineer translating requirements to ethical user stories based on one of the 10 ethical principles:  {transparency}\\n {n_malef}\\n {resp}\\n {privacy}\\n {benefiecnce}\\n {f_and_a}\\n {sus}\\n {dig}\\n {j_and_f}\\n {trust}\\n  and the TEMPLATE:\\n As a <persona> i want to <do something> <so that> \\n\\n Now following this template and the ethical principles definition choose one of the ethical principles and transform the requirement below into a description in one line of an ethical user story, substituting <persona> for the one that requires this functionality, <do something> for what the <persona> wants to do and <so that> to the end goal of the functionality'\n",
-    "\n",
-    "prompt_template = lambda comment: f'''### Human: {instruction} \\n{comment}\\n'''\n",
-    "comment = \"The user must use an authentication token to login.\"\n",
+    "prompt_template = lambda comment: f'''[INST] Transform the requirement below into a one line brief description of an ethical user story \\n{comment} \\n[/INST]'''\n",
+    "comment = \"The user need an authentication token to login.\"\n",
     "prompt = prompt_template(comment)\n",
     "\n",
     "final_model.eval()\n",
     "inputs = t(prompt, return_tensors=\"pt\")\n",
-    "outputs = final_model.generate(input_ids=inputs[\"input_ids\"].to(\"cuda\"), max_new_tokens=512)\n",
+    "outputs = final_model.generate(input_ids=inputs[\"input_ids\"].to(\"cuda\"), max_new_tokens=52)\n",
     "print(t.batch_decode(outputs)[0])"
    ]
   }
