--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -60,7 +60,7 @@
     "    instruction = f'You are an ethical requirements engineer translating requirements to ethical user stories based on one of the 10 ethical principles: {transparency}\\n{n_malef}\\n{resp}\\n{privacy}\\n{benefiecnce}\\n{f_and_a}\\n{sus}\\n{dig}\\n{j_and_f}\\n{trust}\\nand the TEMPLATE:\\nAs a <persona> i want to <do something> <so that>\\nNow following this template and the ethical principles defined above, choose only one of the ethical principles and transform the requirement below into a description in one line of an ethical user story, substituting <persona> for the one that requires this functionality, <do something> for what the <persona> wants to do and <so that> to the end goal of the functionality'\n",
     "\n",
     "    # df['data'] = df.apply((lambda row: f'''### Human: {instruction}\\n{row['text']}]\\n ### Assistant: {row['ethical_us']}'''), axis=1)\n",
-    "    df['data'] = df.apply((lambda row: f'''<s>[INST] {instruction}\\n{row['text']}\\n[/INST] {row['ethical_us']}</s>'''), axis=1)\n",
+    "    df['data'] = df.apply((lambda row: f'''<s>[INST] {instruction.lower()}\\n{row['text'].lower()}\\n[/INST] {row['ethical_us'].lower()}</s>'''), axis=1)\n",
     "\n",
     "    t = transformers.AutoTokenizer.from_pretrained(model_name, use_fast=True)\n",
     "    # t.add_special_tokens({'pad_token': '<PAD>'})\n",
